# chimera

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  HANDOVER.md  LICENSE  PLAN.md  README.md  STATUS.md  start-chimera.cmd
configs/: android_sdk.json  chimera.json  cuttlefish.json  hcs.json  instances.json  qemu.json
docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  README.md  STATUS.md
docs/adr/: ADR-001-shared-folder.md
docs/architecture/: ARCHITECTURE.md
docs/process/: HANDOVER.md
docs/project/: BUILD.md  CODE_REVIEW.md  PLAN.md  STATUS.md
docs/references/: bluestacks.conf  bluestacks_runtime_findings.md  competitor-emulator-smoothness.md  windows_android_virtualization_analysis.md
scripts/: ChimeraVerifyCommon.ps1  analyze-gfxstream-proxy-log.ps1  apply-chimera-gfxstream-patch.ps1  build-android-initrd.sh  build-android-kernel.sh  build-chimera-emugl-runtime.ps1  build-chimera-gfxstream-proxy-runtime.ps1  build-chimera-gfxstream-runtime.ps1  build-chimera-launcher.ps1  build-cuttlefish-vhdx.sh  build-initramfs.sh  build-qemu-initrd.sh  build-wsl-initrd.sh  build.py  check-system-egl.sh  check-vendor-egl.sh  check-vendor-egl2.sh  check-vendor-full.sh  create-test-vhdx.sh  debloat-guest.ps1  fetch-angle-headers.py  fetch-ffmpeg.py  generate-chimera-vk-ext-handlers.py  inspect-system-vhdx.sh  inspect-system-vhdx2.sh  patch-kernel-add-hyperv-drm.sh  patch-kernel-dmabuf.sh  patch-kernel-vsock-drm-modules.sh  prepare-chimera-gfxstream-deps.ps1  project-gpu-driver.py  rebuild-android-kernel-config.sh  register-hvsocket-services.reg  reset-userdata.sh  run-proxy-smoke-test.ps1  run.py  setup-android-sdk.py  start-chimera.ps1  test-adbh264-pipeline.py  test-fb-compile.sh  test-hcs-cuttlefish.py  (+12 more)
scripts/guest/: chimera-display-relay.c  chimera-input-relay.c  dxg-enum.c  fb-render.c
src/common/utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  LowInterferenceProcess.cpp  LowInterferenceProcess.h  ThreadPool.cpp  ThreadPool.h
src/host/audio/: AudioBridge.cpp  AudioBridge.h  CMakeLists.txt
src/host/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
src/host/graphics/: AdbFramebufferCapture.cpp  AdbFramebufferCapture.h  AdbH264FramebufferCapture.cpp  AdbH264FramebufferCapture.h  AngleBackend.cpp  AngleBackend.h  CMakeLists.txt  EglLoader.h  Framebuffer.cpp  Framebuffer.h  FramebufferCapture.h  GraphicsBridge.cpp  GraphicsBridge.h  GrpcFramebufferCapture.cpp  GrpcFramebufferCapture.h  GrpcMmapFramebufferCapture.cpp  GrpcMmapFramebufferCapture.h  HvSocketFramebufferCapture.cpp  HvSocketFramebufferCapture.h  PerformanceMonitor.cpp  PerformanceMonitor.h  Renderer.cpp  Renderer.h  SharedD3D11TextureCapture.cpp  SharedD3D11TextureCapture.h  SharedD3D11TexturePublisher.cpp  SharedD3D11TexturePublisher.h  SharedMemoryFrameAbi.h  SharedMemoryFramebufferCapture.cpp  SharedMemoryFramebufferCapture.h  VncFramebufferCapture.cpp  VncFramebufferCapture.h  WindowD3D11Capture.cpp  WindowD3D11Capture.h
src/host/input/: AndroidConsoleInput.cpp  AndroidConsoleInput.h  CMakeLists.txt  CoordinateMapper.h  EmulatorGrpcInput.cpp  EmulatorGrpcInput.h  GamepadManager.cpp  GamepadManager.h  HvSocketTransport.cpp  HvSocketTransport.h  InputBridge.cpp  InputBridge.h  InputMapper.cpp  InputMapper.h  KeyCodes.h  MacroEngine.cpp  MacroEngine.h  QmpInput.cpp  QmpInput.h  VirtioInput.cpp  VirtioInput.h
src/host/instance/: CMakeLists.txt  DeviceSpoofer.cpp  DeviceSpoofer.h  DiskCompactor.cpp  DiskCompactor.h  HyperVManager.cpp  HyperVManager.h  InstanceManager.cpp  InstanceManager.h  InstanceRuntimeConfig.h  MemoryTrimmer.cpp  MemoryTrimmer.h  ProcessLauncher.cpp  ProcessLauncher.h  QemuBackend.cpp  QemuBackend.h  VirtualMachine.cpp  VirtualMachine.h
src/host/integration/: CMakeLists.txt  ClipboardBridge.cpp  ClipboardBridge.h  LocationSimulator.cpp  LocationSimulator.h  WindowsNotifier.cpp  WindowsNotifier.h
src/host/runtime/gfxstream_bridge_templates/vulkan/: ChimeraGfxstreamVulkanSharedTextureBridge.cpp  ChimeraGfxstreamVulkanSharedTextureBridge.h
src/host/runtime/gfxstream_proxy/: gfxstream_proxy.c  gfxstream_proxy_d3d11.cpp  gfxstream_proxy_renderlib.cpp
src/host/storage/: CMakeLists.txt  SharedFolder.cpp  SharedFolder.h
src/host/ui/: CMakeLists.txt  ChimeraWindow.cpp  ChimeraWindow.h  ChimeraWindow.qml  GuestDisplay.cpp  GuestDisplay.h  InputMapperOverlay.cpp  InputMapperOverlay.h  InputMapperOverlay.qml  NativeEmulatorView.cpp  NativeEmulatorView.h  QmlAndroidControls.cpp  QmlAndroidControls.h  QmlInputMapper.cpp  QmlInputMapper.h  QmlInstanceManager.cpp  QmlInstanceManager.h  QmlMacroEngine.cpp  QmlMacroEngine.h  ScreenRecorder.cpp  ScreenRecorder.h  main.cpp  resources.qrc
tasks/: lessons.md  todo.md
tests/helpers/: echo_args.cpp  shared_d3d11_texture_producer.cpp
tests/integration/: CMakeLists.txt  test_emulator_boot.cpp  test_input_inject.cpp  test_screencap.cpp
tests/unit/: CMakeLists.txt  test_adb_framebuffer_capture.cpp  test_android_console_input.cpp  test_audio_bridge.cpp  test_clipboard_bridge.cpp  test_config_manager.cpp  test_coordinate_mapper.cpp  test_device_spoofer.cpp  test_emulator_grpc_input.cpp  test_file_utils.cpp  test_gamepad_manager.cpp  test_graphics_framebuffer.cpp  test_grpc_framebuffer_capture.cpp  test_input_mapper.cpp  test_instance_manager.cpp  test_location_simulator.cpp  test_macro_engine.cpp  test_process_launcher.cpp  test_qemu_backend.cpp  test_qmp_input.cpp  test_runtime_source_contract.cpp  test_shared_d3d11_texture_capture.cpp  test_shared_memory_framebuffer_capture.cpp  test_ui_main_port_contract.cpp  test_virtual_machine.cpp
tools/chimera-gl60-smoke/: AndroidManifest.xml
tools/chimera-gl60-smoke/src/com/chimera/gl60/: MainActivity.java
tools/chimera-launcher/: AndroidManifest.xml
tools/chimera-launcher/res/values/: styles.xml
tools/chimera-launcher/src/com/chimera/launcher/: BrowserActivity.java  FileManagerActivity.java  MainActivity.java
